# toad-java

./: .gitignore  .jvmopts  .scalafmt.conf  .tool-versions  README.md  build.sbt
glue/: Cargo.toml  README.md
glue/.cargo/: config.toml
glue/src/: e2e.rs  lib.rs  mem.rs  message_code.rs  message_opt_ref.rs  message_opt_value_ref.rs  message_ref.rs  message_type.rs  retry_strategy.rs  runtime.rs  runtime_config.rs  uint.rs
glue/src/dev/: mod.rs
glue/src/dev/toad/: mod.rs  retry_strategy.rs
glue/src/dev/toad/ffi/: mod.rs  ptr.rs  uint.rs
glue/src/dev/toad/msg/: code.rs  id.rs  mod.rs  payload.rs  token.rs  ty.rs
glue/src/dev/toad/msg/option/: mod.rs
glue/src/dev/toad/msg/owned/: mod.rs  msg.rs  opt.rs  opt_value.rs
glue/src/dev/toad/msg/ref_/: mod.rs  msg.rs  opt.rs  opt_value.rs
src/main/java/dev.toad/: Async.java  Client.java  ClientObserveStream.java  Debug.java  Eq.java  RefHawk.java  RetryStrategy.java  RetryStrategyDelay.java  RetryStrategyExponential.java  Runtime.java  RuntimeOptions.java  Server.java  Toad.java  ToadRuntime.java
src/main/java/dev.toad/ffi/: Ptr.java  u16.java  u32.java  u64.java  u8.java  uint.java
src/main/java/dev.toad/msg/: Code.java  Id.java  Message.java  MessageCode.java  MessageOption.java  MessageOptionOwned.java  (+12 more)
src/test/java/: Mock.java
src/test/scala/: .Client.scala.kak.mmSB4r  Async.scala  Debug.scala  E2E.scala  Eq.scala  Glue.scala  Message.scala  MockChannel.scala  Options.scala
toad-java-glue-rs/: Cargo.toml
toad-java-glue-rs/src/: lib.rs  message_opt_ref.rs  retry_strategy.rs  runtime_config.rs
(+12 files in other folders)
